--- a/apoio/templates/apoio/apoio.html
+++ b/apoio/templates/apoio/apoio.html
@@ -1,7 +1,13 @@
-{% if ultimo_form %}
-    <ul>
-      {{ ultimo_form }}
-    </ul>
-{% else %}
-    <p>Nenhum formulário disponível</p>
-{% endif %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>UFCSPA - Apoio</title>
+  </head>
+  <body>
+    <h1>Sala concedida</h1>
+    <h1>Nome do Servidor</h1>
+    <h1>Observação</h1>
+    <h1>Data da reserva</h1>
+  </body>
+</html>
+<!-- This might become a component of sorts later on>
