It ain't much, but it's honest work

--- a/reserva/templates/reserva/reserva.html
+++ b/reserva/templates/reserva/reserva.html
@@ -6,5 +6,16 @@
   </head>
   <body>
     <h1>Graduação</h1>
+    <h2>Pós-Graduação</h2>
+    <h2>Outro</h2>
+    <h2>Solicitante</h2>
+    <h2>Telefone para contato</h2>
+    <h2>Endereço eletrônico</h2>
+    <h1>Atividade curricular</h1>
+    <h2>Outra</h2>
+    <h2>Data</h2>
+    <h2>Horários de Reserva</h2>
+    <h2>Previsão de alunos</h2>
+    <h2>Outros equipamentos</h2>
   </body>
 </html>
